Corretti bug su concorrenza e backup